# sudoku_solver

./: Cargo.toml
benches/: arrayvec.rs  basic.rs  comparison.rs  entries.rs  sorted_bench.rs
src/: basic.rs  file_reader.rs  lib.rs  main.rs  sorted.rs  sudokus.txt
src/solvers/: arrayvec.rs  basic.rs  entries.rs  mod.rs  sorted.rs
tests/: root.rs
