[package]
name = "sudoku"
version = "0.1.0"
authors = ["aidanbabo <aidan.babo@gmail.com>"]
edition = "2018"
default-run = "file"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "basic_bench"
harness = false

[[bench]]
name = "sorted_bench"
harness = false

[[bench]]
name = "entries_bench"
harness = false

[[bench]]
name = "comparison_bench"
harness = false
