[package]
name = "sudoku"
version = "0.1.0"
authors = ["aidanbabo <aidan.babo@gmail.com>"]
edition = "2018"
default-run = "file"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
arrayvec = "0.5"

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "basic"
harness = false

[[bench]]
name = "sorted"
harness = false

[[bench]]
name = "entries"
harness = false

[[bench]]
name = "arrayvec"
harness = false

[[bench]]
name = "comparison"
harness = false
